Optimiser de l'app
